--- a/app/views/admins/artists/new.html.erb
+++ b/app/views/admins/artists/new.html.erb
@@ -41,7 +41,7 @@
 <div class="container">
 <div class="row">
 <div class="col-lg-6" style="margin-bottom: 50px;">
-<h4 class="my-5 border-bottom text-center">商品を追加・編集したいアーティストを選択してください。</h4>
+<h4 class="my-5 border-bottom text-center">商品を追加・編集したいアーティストを</br>選択してください。</h4>
 <% @artists.each do |artist| %>
   <ul>
     <il><%= link_to artist.artist_name, admins_artist_path(artist)%></li>
