admin/items/show

--- a/app/views/admins/discs/edit.html.erb
+++ b/app/views/admins/discs/edit.html.erb
@@ -1,14 +1,17 @@
-<div class=" mx-auto my-5 col-8" style="width: 700px;">
-  <h2>ディスク編集</h2>
-  <h3>シングル・アルバム名：<%= @item.album_name %></h3>
-  <h3>ディスクタイプ：<%= @disc.disc_type %></h3>
+<div class="container">
+<div class="row">
+
+<div class=" mx-auto my-5 col-8">
+  <h2 class="text-center mb-3">ディスク編集</h2>
+  <h3 class="text-center mb-3">シングル・アルバム名：<%= @item.album_name %></h3>
+  <h3 class="text-center mb-5">ディスクタイプ：<%= @disc.disc_type %></h3>
   <!-- 曲の編集・削除 -->
   <% @disc.songs.each do |song| %>
   <%= form_for(song, url: admins_item_disc_song_path(@item, @disc, song), method: :patch) do |f| %>
   <table>
     <tr>
-      <td ><%= f.text_field :song_name, value: song.song_name %></td>
-      <td><%= f.submit "更新", :class=>"btn btn-success" %></td>
+      <td ><%= f.text_field :song_name, value: song.song_name, class:"form-control" %></td>
+      <td><%= f.submit "更新", :class=>"btn btn-success mx-3" %></td>
       <td><%= link_to "削除", admins_item_disc_song_path(@item, @disc, song), method: :delete, :class=>"btn btn-danger" %></td>
     </tr>
   </table>
@@ -18,10 +21,15 @@
 
   <!-- 曲を追加 -->
   <%= form_for(@song, url: admins_item_disc_songs_path(@item, @disc), method: :post) do |f| %>
-  <td><%= f.text_field :song_name %></td>
-  <td><%= f.submit "曲を追加", :class=>"btn btn-primary" %></td>
+  <td><%= f.text_field :song_name, class:"form-control col-8" %></td>
+  <td>
+    <%= f.submit "曲を追加", :class=>"btn btn-primary" %>
+  </td>
   <% end %>
   <!-- 曲を追加終わり -->
 
 <%= link_to "アイテムの詳細に戻る", admins_item_path(@item), :class=>"btn btn-info" %>
 </div>
+
+</div><!-- /row -->
+</div><!-- /container -->
