--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Admins::Users#index</h1>
 <p>Find me in app/views/admins/users/index.html.erb</p>
-<%= h(flash[:notice]) %>
+<%= h(flash[:hoge]) %>
 <div class="container">
 <div class="row">
 <h3>ユーザー一覧</h3>
