--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,71 +1,61 @@
+
+<h2 class="text-center border-bottom my-5"><%= current_user.user_name %>さんの編集ページ</h2>
+
 <div class="container">
 <div class="row">
-
-<h1>Users#edit:ユーザー編集</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
-
+<div class="col-6 mx-auto">
 <%= form_for(current_user , url: user_path , method: :patch) do |f| %>
-<table class="col-10 mx-auto" style="width: 100%;">
+<table class="col-10 mx-auto">
 	<tr>
-		<th>
-<h2><%= current_user.user_name %>の編集ページ</h2></th>
-		<th></th>
-		<th></th>
+		<td><span class = "fa fa-user"></span> ユーザーネーム</td>
+		<td class="float-right"><%= f.text_field :user_name %></td>
 	</tr>
 
 	<tr>
-		<td><span class = "fa fa-user"></span>ユーザーネーム</td>
-		<td><%= f.text_field :user_name %></td>
-		<td></td>
-	</tr>
-
-	<tr>
-		<td><span class = "fa fa-user"></span>氏名（カタカナ）</td>
-		<td><%= f.text_field :name_kana %></td>
-		<td></td>
+		<td><i class="fas fa-language"></i> 氏名（カタカナ）</td>
+		<td class="float-right"><%= f.text_field :name_kana %></td>
 	</tr>
 	<tr>
-		<td><span class = "fa fa-user"></span>氏名（漢字）</td>
-		<td><%= f.text_field :name_kanji %></td>
-		<td></td>
+		<td><i class="fas fa-language"></i> 氏名（漢字）</td>
+		<td class="float-right"><%= f.text_field :name_kanji %></td>
 	</tr>
-<tr>
-		<td><span class = "fa fa-phone"></span>電話番号</td>
-		<td><%= f.text_field :phone_number %></td>
-		<td></td>
-	</tr>
-<tr>
-		<td><span class = "fa fa-user"></span>郵便番号</td>
-		<td><%= f.text_field :postal_code %></td>
-		<td></td>
-	</tr>
-<tr>
-		<td><span class = "fa fa-phone"></span>住所</td>
-		<td><%= f.text_field :address %></td>
-		<td></td>
-	</tr>
-
-
 	<tr>
-		<td><span class = "fa fa-envelope"></span>Email</td>
-		<td><%= f.email_field :email %></td>
-		<td></td>
+		<td><span class = "fa fa-phone"></span> 電話番号</td>
+		<td class="float-right"><%= f.text_field :phone_number %></td>
 	</tr>
-
-		<tr>
-		<td><%= f.submit "編集", class:"btn btn-lg btn-danger btn-base-1 mt-20" %></td>
-		<td></td>
-		<td></td>
-	</tr>
-
 	<tr>
-		<td><%= link_to "マイページに戻る", user_path(current_user), class: "btn btn-lg btn-success btn-base-1 mt-20" %></td>
-		<td></td>
-		<td></td>
+		<td><span style="font-weight: bold;">〒</span> 郵便番号</td>
+		<td class="float-right"><%= f.text_field :postal_code %></td>
+	</tr>
+	<tr>
+		<td><i class="fas fa-home"></i> 住所</td>
+		<td class="float-right"><%= f.text_field :address %></td>
+	</tr>
+	<tr>
+		<td><span class = "fa fa-envelope"></span> Email</td>
+		<td class="float-right"><%= f.email_field :email %></td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			<%= button_tag :type => "submit", :class =>"btn btn-danger mt-3 w-100" do %>
+ 			<i class="fas fa-wrench"></i> 編集
+			<% end %>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<%= link_to user_path(current_user), class: "btn btn-success float-right mt-5" do %> 
+		<i class="fas fa-chevron-left"></i>	マイページにもどる
+		<% end %>
+		</td>
 	</tr>
 </table>
 <% end %>
 
 
-</div>
-</div>
+
+</div><!-- /col-6 mx-auto -->
+
+
+</div><!-- /row -->
+</div><!-- /container -->
