--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,15 +1,12 @@
-<h1>Items#show:商品の詳細</h1>
-			<p>Find me in app/views/items/show.html.erb</p>
 
-<div class="container">
+<div class="container mt-5">
 
 
 <div class="row">
 	<!-- left　column -->
 <div class="col-lg-5 bg-white mb-5">
 	<%= attachment_image_tag @item, :item_img, class:"", style: "width: 100%; height: 100%;" %>
-</div>
-				
+</div>				
 	<!-- center column -->
 <div class="col-lg-5 bg-white px-3 mb-5">
 		<h2 class="my-3"><%= @item.album_name %></h2>
