--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,3 @@
-<h2>Orders#new：最終確認</h2>
-<p>Find me in app/views/orders/new.html.erb</p>
 
 <% if current_user.cart_items.empty? %>
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -132,7 +130,11 @@
   </tbody>
 </table>
 
-<%= f.submit "注文を確定する", data: {confirm: "本当に確定しますか？"}, class:"btn btn-primary col-lg-12 my-5" %>
+<%= button_tag :type => "submit", data: {confirm: "本当に確定しますか？"}, :class =>"btn btn-primary col-lg-12 my-5" do %>
+  <i class="fas fa-check"></i> 注文を確定する
+<% end %>
+
+
 <% end %>
 
 <% end %>
