--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,13 @@
-<!-- <h4>Users#show:マイページ</h4>
-<p>Find me in app/views/users/show.html.erb</p>
- -->
 
+<h2 class="text-center border-bottom my-5">My Page</h2>
 <div class="container">
 <div class="row">
-
 <div class="col-10 mx-auto">
 
 <div class="container">
 <div class="row">
 	<!-- left column -->
-	<div class="col-lg-4 mt-5">
+	<div class="col-lg-4">
 		<ul class="list-group">
 		<li class="list-group-item bg-danger text-white" style="height: 270px;">
 		<p class="text-center mt-3">
@@ -23,7 +20,7 @@
 
 	<!-- right column -->
 	<div class="col-lg-8 text-center">
-		<ul class="list-group mt-5">
+		<ul class="list-group">
  			<li class="list-group-item p-4" style="height: 100px;">
 	 			<h3 class="col-12">Name：  <%= current_user.user_name %></h3>
  			</li>
@@ -64,23 +61,49 @@
 <!-- 注文履歴 -->
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
-  	<div class="card text-center mt-4">
-  <div class="card-body bg-info text-white"><h5>
+  	<div class="card text-center">
+  <div class="card-body bg-secondary text-white"><h5>
     Order History</h5>
   </div>
 </div>
+
 <% current_user.orders.each do |order| %><% @total = 0 %>
 		<div class="card">
-		  <div class="card-body text-center">
-		  	<a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= order.id %>">
-				      <p class="w-25 float-left">注文番号：<%= order.id %>-<%= order.user_id%><%= order.order_sending_id %></p><p class="w-75 float-right">　配送状況：<%= order.status %></p></a>
+		  <div class="card-body text-center list-group p-0"> 
+  	  	<a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= order.id %>" class="list-group-item list-group-item-action">
+				      <p class="float-left mx-5 my-4">注文番号：<%= order.id %>-<%= order.user_id%><%= order.order_sending_id %></p>
+              <p class="float-right mx-5 my-4">　配送状況：<%= order.status %></p>
+        </a>
 		  </div>
 		 	<div id="collapse<%= order.id %>" class="card-collapse collapse in">
-				<div class="card-body"><% order.order_items.each do |oi| %>
-				<p>購入商品名：<%= oi.item.album_name %>個数：<%= oi.item_order_counted %> 小計：<%=oi.item_order_counted * oi.item_order_price %></p>
-				<% @total += oi.item_order_counted * oi.item_order_price %>
-			<% end %>
-			<p>合計：<%= @total %>円</p></br>
+				<div class="card-body">
+
+        <table class="table">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col">購入商品名</th>
+            <th scope="col">個数</th>
+            <th scope="col">小計</th>
+          </tr>
+        </thead>
+        <% order.order_items.each do |oi| %>
+          <tbody>
+            <tr>
+              <th scope="row"><%= oi.item.album_name %></th>
+              <td><%= oi.item_order_counted %></td>
+              <td>¥<%=oi.item_order_counted * oi.item_order_price %></td>
+            </tr>
+          </tbody>
+          <% @total += oi.item_order_counted * oi.item_order_price %>
+          <% end %>
+          <tbody>
+            <tr>
+              <th scope="row" colspan="2" class="text-right">合計</th>
+              <td>¥<%= @total %></td>
+            </tr>
+          </tbody>
+        </table>
+
 				</div>
 			</div>
 	</div><!-- /list-group -->
