--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -3,7 +3,7 @@
 		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 		<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
 			<h1><%= @artist.artist_name %>の商品を追加</h1>
-<h3 class="text-danger text-center"><%= notice %></h3>
+<h3 class="text-danger text-center"><%= flash[:hoge] %></h3>
 			<%= form_for(@item, url: admins_items_path, method: :post) do |f| %>
 				<table>
 					<tr>
