--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -1,5 +1,3 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
 
 <div class="alert alert-info text-center" role="alert">
 <h4>配送ステータスは以下の順に更新されます。</br><strong>準備中→発送準備中→発送完了</strong></h4>
@@ -30,6 +28,7 @@
 		</h5><!-- card-title1 -->
 		<h6 class="card-subtitle mb-2 text-muted">
 氏名：<%= o1.user.name_kanji %>(<%= o1.user.name_kana %>)</br>
+郵便番号：<%= o1.order_sending_postal_code %></br>
 送付先：<%= o1.order_sending_str %></h6><!-- card-subtitle -->
 <h6 class="card-text"><strong>注文内容</strong></h6>
 <p class="card-text2 bg-black">
@@ -61,6 +60,7 @@
 		</h5><!-- card-title1 -->
 		<h6 class="card-subtitle mb-2 text-muted">
 氏名：<%= o2.user.name_kanji %>(<%= o2.user.name_kana %>)</br>
+郵便番号：<%= o2.order_sending_postal_code %></br>
 送付先：<%= o2.order_sending_str %></h6><!-- card-subtitle -->
 <h6 class="card-text"><strong>注文内容</strong></h6>
 <p class="card-text2 bg-black">
@@ -95,6 +95,7 @@
 		</h5><!-- card-title1 -->
 		<h6 class="card-subtitle mb-2 text-muted">
 氏名：<%= o3.user.name_kanji %>(<%= o3.user.name_kana %>)</br>
+郵便番号：<%= o3.order_sending_postal_code %></br>
 送付先：<%= o3.order_sending_str %></h6><!-- card-subtitle -->
 <h6 class="card-text"><strong>注文内容</strong></h6>
 <p class="card-text2 bg-black">
