--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,7 +75,7 @@ body {
     100% {opacity: 1}
 }
 
-
+.wf-nicomoji { font-family: "Nico Moji"; }
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
