--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -51,7 +51,7 @@
 
 <!-- right column -->
 <div class="col-lg-2 bg-white mb-5">
-	<h3 class="my-3 mx-3">DISK</h3>
+	<h3 class="my-3 mx-3">DISC</h3>
 <!-- Button trigger modal -->
 	<% @n = 1%>
 
