--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 
-<h2 class="text-center border-bottom my-5">My Page</h2>
+<h1 class="text-center border-bottom my-5 wf-nicomoji">My Page</h1>
 <div class="container">
 <div class="row">
 <div class="col-10 mx-auto">
@@ -13,7 +13,7 @@
 		<p class="text-center mt-3">
 		<i class="fas fa-user-circle" style="font-size: 10em;"></i>
 		</p>
-		<h3 class="text-center">User Info</h3>
+		<h3 class="text-center wf-nicomoji">User Info</h3>
 		</li>
 		</ul>
 	</div><!-- /left column -->
