--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
 	<!-- left　column -->
-<div class="col-lg-5 bg-white mb-5">
+<div class="col-lg-5 mb-5">
 	<%= attachment_image_tag @item, :item_img, class:"", style: "width: 100%; height: 100%;" %>
 </div>				
 	<!-- center column -->
