--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,7 +1,7 @@
 <%= h(flash[:hoge]) %>
 <div class="container">
+<h3 class="text-center border-bottom my-5">ユーザー 一覧</h3>
 <div class="row">
-<h3>ユーザー一覧</h3>
 <table class="col-lg-12 table table-striped">
   <thead>
     <tr>
